k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api
  namespace: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/yoshikrit/reservation-inventory-service:1
          imagePullPolicy: Always
          command: ["./api"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
              ephemeral-storage: 50Mi
            limits:
              cpu: 200m
              memory: 128Mi
              ephemeral-storage: 100Mi
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api
  namespace: inventory
spec:
  type: NodePort
  selector:
    app: inventory-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
