k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis:8.6.4
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
              ephemeral-storage: 50Mi
            limits:
              cpu: 100m
              memory: 64Mi
              ephemeral-storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: inventory
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
